--- a/views/answering.html
+++ b/views/answering.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home Page</title>
+    <title>Take an exercise</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
