--- a/public/css/app.css
+++ b/public/css/app.css
@@ -169,3 +169,20 @@ label {
   display: block;
 }
 
+input {
+  background-color: transparent;
+  border: 0.1rem solid #d1d1d1;
+  border-radius: .4rem;
+  box-shadow: none;
+  box-sizing: inherit;
+  height: 3.8rem;
+  padding: .6rem 1.0rem;
+  width: 100%;
+}
+input:focus {
+  border-color: rgba(155, 77, 202, 1);
+  outline: 0;
+}
+input[type="submit"] {
+   width: fit-content;
+ }
